--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -6,15 +6,15 @@
   padding:15px;
   float: left;
   overflow: hidden;
-  margin: 10px 1%;
+  margin: 10px 10px;
   min-width: 250px;
-  max-width: 310px;
+  max-width: 300px;
   width: 100%;
-  min-height:350px;
-  background-color: transparent;
+  min-height:300px;
+  background-color: #fff;
   border-radius: 15px;
-  border-top: 5px solid #d64298;
-  border-bottom: 5px solid #d64298;
+  border-top: 7px solid #d64298;
+  border-bottom: 7px solid #d64298;
   color: #9e9e9e;
   text-align: center;
   font-size: 16px;
@@ -72,7 +72,7 @@
 }
 
 .card .button:before {
-  background-color: #d2652d;
+  background-color: #ffffff;
   position: absolute;
   top: 100%;
   bottom: 0;
